# SanOpps

./: README.md  documentation.html  documentation.qmd
sanopps/: Model first draft.xlsx  Model first draft.xlsx.yaml  capital_costs.csv  costs.csv  documentation.qmd  glossary.csv  methodology.ipynb  methodology.py  params.csv  pyproject.toml  scratch.ipynb  variables.py
