[tool.poetry]
name = "sanopps"
version = "0.1.0"
description = ""
authors = ["Daly Wettermark <139182397+dalyw@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycel = "^1.0b30"
seaborn = "^0.13.2"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
marimo = "^0.8.9"
altair = "^5.4.1"
vegafusion = "^1.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
